--- a/src/components/inputs/Input.css
+++ b/src/components/inputs/Input.css
@@ -1,16 +1,16 @@
 /*
 Error: File to import not found or unreadable: src/variables.
-        on line 1 of SignUp.scss
+        on line 1 of Input.scss
 
 1: @import "src/variables";
 2: 
-3: .signup {
-4:   @include page;
-5: 
-6:   display: flex;
+3: .input {
+4:   background-color: $color-gray;
+5:   outline: none;
+6:   border: none;
 
 Backtrace:
-SignUp.scss:1
+Input.scss:1
 C:/RailsInstaller/Ruby2.3.3/lib/ruby/gems/2.3.0/gems/sass-3.7.4/lib/sass/tree/import_node.rb:67:in `rescue in import'
 C:/RailsInstaller/Ruby2.3.3/lib/ruby/gems/2.3.0/gems/sass-3.7.4/lib/sass/tree/import_node.rb:45:in `import'
 C:/RailsInstaller/Ruby2.3.3/lib/ruby/gems/2.3.0/gems/sass-3.7.4/lib/sass/tree/import_node.rb:28:in `imported_file'
@@ -48,4 +48,4 @@ C:/RailsInstaller/Ruby2.3.3/bin/sass:23:in `<main>'
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: File to import not found or unreadable: src/variables.\A         on line 1 of SignUp.scss\A \A 1: @import \"src/variables\";\A 2: \A 3: .signup {\A 4:   @include page;\A 5: \A 6:   display: flex;"; }
+  content: "Error: File to import not found or unreadable: src/variables.\A         on line 1 of Input.scss\A \A 1: @import \"src/variables\";\A 2: \A 3: .input {\A 4:   background-color: $color-gray;\A 5:   outline: none;\A 6:   border: none;"; }
