--- a/src/pages/login/Login.scss
+++ b/src/pages/login/Login.scss
@@ -3,8 +3,18 @@
 .login {
   @include page;
 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 10vh;
+
   &__form {
     margin: $margin-middle;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 40vh;
+    min-width: $min-width;
   }
 
   &__submit {
@@ -12,6 +22,7 @@
     background-color: $color-dark;
     min-width: $min-width;
     color: white;
+    width: 100%;
   }
 
   &__signup {
