--- a/src/pages/signUp/SignUp.scss
+++ b/src/pages/signUp/SignUp.scss
@@ -3,8 +3,15 @@
 .signup {
   @include page;
 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 10vh;
+
   &__form {
     margin: $margin-middle;
+    width: 40vw;
+    min-width: $min-width;
   }
 
   &__submit {
@@ -12,5 +19,6 @@
     background-color: $color-tertiary;
     color: $color-dark;
     min-width: $min-width;
+    width: 100%;
   }
 }
