--- a/src/variables.scss
+++ b/src/variables.scss
@@ -13,8 +13,8 @@ $padding-small: 10px;
 $padding-size: 20px;
 
 $margin-small: 10px;
-
 $margin-middle: 20px;
+$margin-large: 25px;
 
 $min-width: 300px;
 
