--- a/src/components/projects/projectsHeader/ProjectsHeader.css
+++ b/src/components/projects/projectsHeader/ProjectsHeader.css
@@ -1,16 +1,16 @@
 /*
 Error: File to import not found or unreadable: src/variables.
-        on line 1 of Layout.scss
+        on line 1 of ProjectsHeader.scss
 
 1: @import "src/variables";
 2: 
-3: .nav {
-4:   background-color: white;
-5:   min-height: 80px;
-6:   box-shadow: 2px 2px 8px $elevation-color;
+3: .projects-header {
+4:   padding: $padding-small;
+5:   display: flex;
+6:   justify-content: center;
 
 Backtrace:
-Layout.scss:1
+ProjectsHeader.scss:1
 C:/RailsInstaller/Ruby2.3.3/lib/ruby/gems/2.3.0/gems/sass-3.5.1/lib/sass/tree/import_node.rb:67:in `rescue in import'
 C:/RailsInstaller/Ruby2.3.3/lib/ruby/gems/2.3.0/gems/sass-3.5.1/lib/sass/tree/import_node.rb:45:in `import'
 C:/RailsInstaller/Ruby2.3.3/lib/ruby/gems/2.3.0/gems/sass-3.5.1/lib/sass/tree/import_node.rb:28:in `imported_file'
@@ -48,4 +48,4 @@ C:/RailsInstaller/Ruby2.3.3/bin/sass:22:in `<main>'
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: File to import not found or unreadable: src/variables.\A         on line 1 of Layout.scss\A \A 1: @import \"src/variables\";\A 2: \A 3: .nav {\A 4:   background-color: white;\A 5:   min-height: 80px;\A 6:   box-shadow: 2px 2px 8px $elevation-color;"; }
+  content: "Error: File to import not found or unreadable: src/variables.\A         on line 1 of ProjectsHeader.scss\A \A 1: @import \"src/variables\";\A 2: \A 3: .projects-header {\A 4:   padding: $padding-small;\A 5:   display: flex;\A 6:   justify-content: center;"; }
