:clown_face: leads form mock

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,6 @@
 @import "variables";
+@import "~bulma/sass/utilities/all";
+@import "~bulma/sass/components/modal";
 
 .App {
   text-align: center;
