--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,9 @@
   margin: 0;
   font-family: 'Poppins', serif; }
 
+html {
+  overflow-y: auto !important; }
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
