--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,10 @@
   font-family: 'Poppins', serif;
 }
 
+html {
+  overflow-y: auto !important;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
