:clown_face: logged user menu & signout

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,6 +3,7 @@ $color-secondary: #e7333f;
 $color-tertiary: aquamarine;
 $color-dark: #1e242b;
 $color-gray: #efefef;
+$color-link: #21c2de;
 
 $color-text-dark: #333;
 $color-text-light: rgba(255, 255, 255, 0.7);
