:wrench: constant routes

--- a/src/components/users/userProfile/UserProfile.scss
+++ b/src/components/users/userProfile/UserProfile.scss
@@ -50,3 +50,12 @@
     }
   }
 }
+
+.admin-bar {
+  display: flex;
+  align-items: center;
+
+  & > div:last-child {
+    margin-left: $margin-large;
+  }
+}
