--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,12 @@
 * {
   box-sizing: border-box;
   color: dimgray;
+  margin: 0;
+  font-family: 'Poppins', serif;
+}
+
+html {
+  overflow-y: auto !important;
 }
 
 body {
