:alembic: feature/projects-connection

--- a/src/components/projects/leadModal/LeadModal.scss
+++ b/src/components/projects/leadModal/LeadModal.scss
@@ -20,4 +20,10 @@
       margin-bottom: $margin-small;
     }
   }
+
+  button[type="submit"] {
+    @include button;
+
+    background-color: $color-primary;
+  }
 }
