--- a/src/components/projects/leadModal/LeadModal.scss
+++ b/src/components/projects/leadModal/LeadModal.scss
@@ -4,6 +4,20 @@
   background-color: white;
   border-radius: 5px;
   padding: $padding-size;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &__close {
+    align-self: flex-end;
+    font-size: 1.2rem;
+    cursor: pointer;
+    z-index: 1;
+  }
+
+  & > form {
+    width: 80%;
+  }
 
   &--new {
     background-color: lighten($color-primary, 20%);
@@ -11,6 +25,7 @@
 
   &__img {
     width: 25%;
+    margin-bottom: 10px;
   }
 
   &__title {
