--- a/src/components/projects/projectCard/ProjectCard.scss
+++ b/src/components/projects/projectCard/ProjectCard.scss
@@ -71,6 +71,10 @@
 
     &:hover {
       background-color: $color-primary;
+
+      &:disabled {
+        background-color: $color-gray;
+      }
     }
   }
 }
