--- a/src/components/inputs/Input.scss
+++ b/src/components/inputs/Input.scss
@@ -8,6 +8,7 @@
   padding: $padding-small $padding-size;
   border-radius: 30px;
   box-sizing: border-box;
+  font-size: 0.9rem;
 
   &:focus {
     border: lightskyblue 1px solid;
