--- a/src/pages/project/projectInfo/projectInfo.scss
+++ b/src/pages/project/projectInfo/projectInfo.scss
@@ -71,4 +71,25 @@
       }
     }
   }
+
+  &__email {
+    background-color: $color-text-light;
+    color: $color-text-dark;
+    padding: 2px 10px;
+    text-align: center;
+    margin: 4px;
+    border-radius: 2px;
+    font-size: 0.8rem;
+    text-align: left;
+    position: relative;
+
+    div {
+      background-color: $color-link;
+      width: 4px;
+      height: 100%;
+      position: absolute;
+      border-radius: 2px;
+      left: 0;
+    }
+  }
 }
